# tmu_scraper

./: README.md  course_plan.json  pyproject.toml
tmu_scraper/: main.py
